afuncionalidad para todos los headers

--- a/pages/carta.html
+++ b/pages/carta.html
@@ -146,7 +146,7 @@
   </div>
 </main>
 
-<script src="/js/carta.js"></script>
-<script src="/js/script.js"></script>
+<script src="../js/carta.js"></script>
+<script src="../js/script.js"></script>
 </body>
 </html>
