--- a/pages/cartas/combinados.html
+++ b/pages/cartas/combinados.html
@@ -10,6 +10,7 @@
           color: #fff; /* Texto en blanco */
           font-family: 'Roboto', sans-serif;
       }
+
       .carta {
           max-width: 800px;
           margin: 20px auto;
@@ -18,6 +19,7 @@
           border-radius: 8px;
           box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5); /* Sombra para un efecto flotante */
       }
+
       .titulo-carta {
           font-family: 'Playfair Display', serif;
           font-size: 32px;
@@ -25,9 +27,11 @@
           margin-bottom: 20px;
           color: #d2a679; /* Color dorado para el título */
       }
+
       .categoria {
           margin-bottom: 15px;
       }
+
       .titulo-categoria {
           font-size: 24px;
           font-weight: bold;
@@ -35,11 +39,13 @@
           margin-bottom: 10px;
           padding-bottom: 5px;
       }
+
       .producto {
           display: flex;
           justify-content: space-between;
           margin-bottom: 5px;
       }
+
       .precio {
           color: #d2a679; /* Color dorado para los precios */
           font-weight: bold;
@@ -156,7 +162,9 @@
 
       <div>*Combinado con bebida energética + 1€</div>
     </div>
+  </div>
 </main>
-</div>
+
+<script src="../../js/script.js"></script>
 </body>
 </html>
