cartas medio bn

--- a/pages/carta.html
+++ b/pages/carta.html
@@ -79,40 +79,40 @@
 
       <!-- Categoría Combinados -->
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4"> <!-- Añade margen en la parte inferior -->
-        <a href="cartas/combinados.html" class="focus-target" data-message="" data-image="" data-description="">
-          <img src="" alt="Combinados" class="w-full h-full rounded-lg shadow object-cover">
+        <a href="cartas/combinados.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
+          <img src="" alt="Combinados" class="w-full h-full rounded-lg shadow object-cover"> <!--TODO LINKEAR IMAGEN DE CATEGORIA-->
           <p class="text-sm font-semibold mt-2 hidden md:block">Combinados</p>
         </a>
       </div>
 
       <!-- Categoría Cachimbas -->
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
-        <a href="cartas/cachimbas.html" class="focus-target" data-message="" data-image="" data-description="">
-          <img src="" alt="Cachimbas" class="w-full h-full rounded-lg shadow object-cover">
+        <a href="cartas/cachimbas.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
+          <img src="" alt="Cachimbas" class="w-full h-full rounded-lg shadow object-cover"> <!--TODO LINKEAR IMAGEN DE CATEGORIA-->
           <p class="text-sm font-semibold mt-2 hidden md:block">Cachimbas</p>
         </a>
       </div>
 
       <!-- Categoría Cócteles -->
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
-        <a href="cartas/cocteles.html" class="focus-target" data-message="" data-image="" data-description="">
-          <img src="" alt="Cócteles" class="w-full h-full rounded-lg shadow object-cover">
+        <a href="cartas/cocteles.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
+          <img src="" alt="Cócteles" class="w-full h-full rounded-lg shadow object-cover"> <!--TODO LINKEAR IMAGEN DE CATEGORIA-->
           <p class="text-sm font-semibold mt-2 hidden md:block">Cócteles</p>
         </a>
       </div>
 
       <!-- Categoría Cervezas -->
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
-        <a href="cartas/cervezas.html" class="focus-target" data-message="" data-image="" data-description="">
-          <img src="" alt="Cervezas" class="w-full h-full rounded-lg shadow object-cover">
+        <a href="cartas/cervezas.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
+          <img src="" alt="Cervezas" class="w-full h-full rounded-lg shadow object-cover"> <!--TODO LINKEAR IMAGEN DE CATEGORIA-->
           <p class="text-sm font-semibold mt-2 hidden md:block">Cervezas</p>
         </a>
       </div>
 
       <!-- Categoría Vinos -->
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
-        <a href="cartas/vinos.html" class="focus-target" data-message="" data-image="" data-description="">
-          <img src="" alt="Vinos" class="w-full h-full rounded-lg shadow object-cover">
+        <a href="cartas/vinos.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
+          <img src="" alt="Vinos" class="w-full h-full rounded-lg shadow object-cover"> <!--TODO LINKEAR IMAGEN DE CATEGORIA-->
           <p class="text-sm font-semibold mt-2 hidden md:block">Vinos</p>
         </a>
       </div>
@@ -120,7 +120,7 @@
       <!-- Categoría Refrescos -->
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
         <a href="cartas/refrescos.html" class="focus-target" data-message="" data-image="" data-description="">
-          <img src="" alt="Refrescos" class="w-full h-full rounded-lg shadow object-cover">
+          <img src="" alt="Refrescos" class="w-full h-full rounded-lg shadow object-cover"> <!--TODO LINKEAR IMAGEN DE CATEGORIA-->
           <p class="text-sm font-semibold mt-2 hidden md:block">Refrescos</p>
         </a>
       </div>
@@ -128,7 +128,7 @@
       <!-- Categoría Batidos -->
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
         <a href="cartas/batidos.html" class="focus-target" data-message="" data-image="" data-description="">
-          <img src="" alt="Batidos" class="w-full h-full rounded-lg shadow object-cover">
+          <img src="" alt="Batidos" class="w-full h-full rounded-lg shadow object-cover"> <!--TODO LINKEAR IMAGEN DE CATEGORIA-->
           <p class="text-sm font-semibold mt-2 hidden md:block">Batidos</p>
         </a>
       </div>
