--- a/pages/cartas/batidos.html
+++ b/pages/cartas/batidos.html
@@ -3,8 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <title>El Caiman Club</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <style>
+      body {
+          background-color: #e0f2fe; /* Mantenemos el fondo claro */
+      }
+      .carta {
+          max-width: 600px;
+          margin: 20px auto;
+          background-color: #f8eee7; /* Fondo en tono vainilla suave */
+          padding: 20px;
+          border-radius: 8px;
+          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+      }
+      .titulo-carta {
+          font-size: 32px;
+          text-align: center;
+          margin-bottom: 20px;
+          color: #f3d1f4; /* Color rosa suave para el título */
+      }
+      .contenido {
+          color: #ff6b6b; /* Color rosa más suave para los nombres */
+          font-weight: bold;
+      }
+      .producto {
+          display: flex;
+          justify-content: space-between;
+          margin-bottom: 5px;
+      }
+      .precio {
+          color: #8ecae6; /* Color vainilla claro para los precios */
+          font-weight: bold;
+      }
+  </style>
+
+
 </head>
-<body>
+<body >
 <header>
   <!-- Navbar -->
   <nav class="bg-white p-4">
@@ -45,11 +80,19 @@
     <a href="../shop.html" class="block text-pink-600 hover:text-pink-900 mb-2">Shop</a>
   </div>
 </header>
-
 <main>
+  <div class="carta">
+    <div class="titulo-carta" style="color: #3a86ff;">Batidos</div>
 
+    <div class="categoria">
+      <div class="producto"><span class="contenido">Batido Chocolate</span> <span class="precio">5€</span></div>
+      <div class="producto"><span class="contenido">Batido Vainilla</span> <span class="precio">5€</span></div>
+      <div class="producto"><span class="contenido">Batido Fresa</span> <span class="precio">5€</span></div>
+      <div class="producto"><span class="contenido">Batido de Kit-Kat</span> <span class="precio">6€</span></div>
+      <div class="producto"><span class="contenido">Batido de cookies</span> <span class="precio">6€</span></div>
+    </div>
+  </div>
 </main>
-
 <script src="../../js/script.js"></script>
 </body>
 </html>
