--- a/pages/cartas/vinos.html
+++ b/pages/cartas/vinos.html
@@ -4,6 +4,39 @@
   <meta charset="UTF-8">
   <title>El Caiman Club</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <style>
+      body {
+          background-color: #4b0b26; /* Un fondo neutro y suave */
+      }
+      .carta {
+          max-width: 600px;
+          margin: 20px auto;
+          background-color: #f8f0eb; /* Un tono claro como fondo para la carta */
+          padding: 20px;
+          border-radius: 8px;
+          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+      }
+      .titulo-carta {
+          font-size: 32px;
+          text-align: center;
+          margin-bottom: 20px;
+          color: #641e16; /* Un tono burdeos oscuro, recordando al vino */
+      }
+      .contenido {
+          color: #6e2c00; /* Un tono marrón oscuro para los nombres, como la madera de barricas */
+          font-weight: bold;
+      }
+      .producto {
+          display: flex;
+          justify-content: space-between;
+          margin-bottom: 5px;
+      }
+      .precio {
+          color: #d7b9d5; /* Un color claro para los precios, manteniendo la legibilidad */
+          font-weight: bold;
+      }
+  </style>
+
 </head>
 <body>
 <header>
@@ -46,9 +79,17 @@
     <a href="../shop.html" class="block text-pink-600 hover:text-pink-900 mb-2">Shop</a>
   </div>
 </header>
-
 <main>
+  <div class="carta">
+    <div class="titulo-carta" style="color: #3a86ff;">Vino</div>
 
+    <div class="categoria">
+      <div class="producto"><span class="contenido">Copa Rioja Tinto</span> <span class="precio">2,50€</span></div>
+      <div class="producto"><span class="contenido">Copa Alma Verdej</span> <span class="precio">2,50€</span></div>
+      <div class="producto"><span class="contenido">Botella Rioja Tinto</span> <span class="precio">13€</span></div>
+      <div class="producto"><span class="contenido">Botella Alma Verdejo</span> <span class="precio">13€</span></div>
+    </div>
+  </div>
 </main>
 
 <script src="../../js/script.js"></script>
