--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -2,54 +2,100 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Haz tu reserva!</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body>
-<header class="fixed w-full z-10">
-  <!-- Navbar -->
-  <nav class="bg-white p-4">
-    <div class="container mx-auto flex justify-between items-center bg-white">
-      <!--Logo -->
-      <div>
-        <a href="#"><img src="/src/img/logo/caiman-logo.png" class="img-fluid" alt="El Caiman Club" height="25%" width="35%"></a>
-      </div>
-      <!--Elementos del menú-->
-      <div class="hidden md:flex space-x-4">
-        <a href="../index.html" class="text-pink-600 hover:text-pink-900">Inicio</a>
-        <a href="carta.html" class="text-pink-600 hover:text-pink-900">Carta</a>
-        <a href="#" class="text-pink-600 hover:text-pink-900">Reservas</a>
-        <a href="ofertas.html" class="text-pink-600 hover:text-pink-900">Ofertas y eventos</a>
-        <a href="donde-estamos.html" class="text-pink-600 hover:text-pink-900">Donde estamos</a>
-        <a href="about-us.html" class="text-pink-600 hover:text-pink-900">Nosotros</a>
-        <a href="shop.html" class="text-pink-600 hover:text-pink-900">Shop</a>
-      </div>
+<body class="font-sans bg-black">
+  <header class="fixed w-full z-10">
+    <!-- Navbar -->
+    <nav class="bg-white p-4">
+      <div class="container mx-auto flex justify-between items-center bg-white">
+        <!--Logo -->
+        <div>
+          <a href="#"><img src="/src/img/logo/caiman-logo.png" class="img-fluid" alt="El Caiman Club" height="25%" width="35%"></a>
+        </div>
+        <!--Elementos del menú-->
+        <div class="hidden md:flex space-x-4">
+          <a href="../index.html" class="text-pink-600 hover:text-pink-900">Inicio</a>
+          <a href="carta.html" class="text-pink-600 hover:text-pink-900">Carta</a>
+          <a href="reservas.html" class="text-pink-600 hover:text-pink-900">Reservas</a>
+          <a href="#" class="text-pink-600 hover:text-pink-900">Ofertas y eventos</a>
+          <a href="donde-estamos.html" class="text-pink-600 hover:text-pink-900">Donde estamos</a>
+          <a href="about-us.html" class="text-pink-600 hover:text-pink-900">Nosotros</a>
+          <a href="shop.html" class="text-pink-600 hover:text-pink-900">Shop</a>
+        </div>
 
-      <div class="md:hidden">
-        <button id="menu-toggle" class="text-pink-600 hover:text-pink-900">
-          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
-          </svg>
-        </button>
+        <div class="md:hidden">
+          <button id="menu-toggle" class="text-pink-600 hover:text-pink-900">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+            </svg>
+          </button>
+        </div>
       </div>
+    </nav>
+
+    <!-- Menú desplegable para dispositivos móviles -->
+    <div id="menu" class="md:hidden hidden bg-white p-4">
+      <a href="carta.html" class="block text-pink-600 hover:text-pink-900 mb-2">Carta</a>
+      <a href="reservas.html" class="block text-pink-600 hover:text-pink-900 mb-2">Reservas</a>
+      <a href="#" class="block text-pink-600 hover:text-pink-900 mb-2">Ofertas y eventos</a>
+      <a href="donde-estamos.html" class="block text-pink-600 hover:text-pink-900 mb-2">Donde estamos</a>
+      <a href="about-us.html" class="block text-pink-600 hover:text-pink-900 mb-2">Nosotros</a>
+      <a href="shop.html" class="block text-pink-600 hover:text-pink-900 mb-2">Shop</a>
     </div>
-  </nav>
+  </header>
+  <main>
+    <!-- Formulario de reserva -->
+    <div class="container mx-auto flex justify-center items-center h-screen">
+      <form class="max-w-md w-full md:w-2/3 lg:w-1/2 xl:w-1/3 p-8 bg-white rounded-lg shadow-lg">
+        <h2 class="text-2xl font-semibold mb-6">Información de Reserva</h2>
 
-  <!-- Menú desplegable para dispositivos móviles -->
-  <div id="menu" class="md:hidden hidden bg-white p-4">
-    <a href="carta.html" class="block text-pink-600 hover:text-pink-900 mb-2">Carta</a>
-    <a href="#" class="block text-pink-600 hover:text-pink-900 mb-2">Reservas</a>
-    <a href="ofertas.html" class="block text-pink-600 hover:text-pink-900 mb-2">Ofertas y eventos</a>
-    <a href="donde-estamos.html" class="block text-pink-600 hover:text-pink-900 mb-2">Donde estamos</a>
-    <a href="about-us.html" class="block text-pink-600 hover:text-pink-900 mb-2">Nosotros</a>
-    <a href="shop.html" class="block text-pink-600 hover:text-pink-900 mb-2">Shop</a>
-  </div>
-</header>
+        <div class="mb-4">
+          <label for="nombre" class="block text-sm font-medium text-gray-600">Nombre</label>
+          <input type="text" id="nombre" name="nombre" class="form-input w-full">
+        </div>
 
-<main>
+        <div class="mb-4">
+          <label for="telefono" class="block text-sm font-medium text-gray-600">Teléfono</label>
+          <input type="number" id="telefono" name="telefono" class="form-input w-full">
+        </div>
 
-</main>
+        <div class="mb-4">
+          <label for="email" class="block text-sm font-medium text-gray-600">Email</label>
+          <input type="email" id="email" name="email" class="form-input w-full">
+        </div>
 
-<script src="../js/script.js"></script>
+        <div class="mb-4">
+          <label for="fecha" class="block text-sm font-medium text-gray-600">Fecha</label>
+          <input type="date" id="fecha" name="fecha" class="form-input w-full">
+        </div>
+
+        <div class="mb-4">
+          <label for="hora" class="block text-sm font-medium text-gray-600">Hora</label>
+          <input type="time" id="hora" name="hora" class="form-input w-full">
+        </div>
+
+        <div class="mb-4">
+          <label for="numComensales" class="block text-sm font-medium text-gray-600">Número de Comensales (hasta 12)</label>
+          <input type="range" id="numComensales" name="numComensales" min="1" max="12" class="form-range w-full bg-pink-600 text-white">
+          <p class="text-center text-pink-600 mt-2" id="numComensalesValue">Número de Comensales: 1</p>
+        </div>
+
+        <!-- Botón de enviar -->
+        <button type="submit" class="bg-pink-600 text-white py-2 px-4 rounded hover:bg-pink-700 w-full">Enviar</button>
+      </form>
+    </div>
+  </main>
+
+  <script src="../js/script.js"></script>
+  <script>
+  const numComensalesRange = document.getElementById('numComensales');
+  const numComensalesValue = document.getElementById('numComensalesValue');
+
+  numComensalesRange.addEventListener('input', () => {
+    numComensalesValue.textContent = `Número de Comensales: ${numComensalesRange.value}`;
+  });
+  </script>
 </body>
 </html>
