--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -45,9 +45,9 @@
       <a href="shop.html" class="block text-pink-600 hover:text-pink-900 mb-2">Shop</a>
     </div>
   </header>
-  <main>
+  <main class="pt-24">
     <!-- Formulario de reserva -->
-    <div class="container mx-auto flex justify-center items-center h-screen">
+    <div class="container mx-auto flex justify-center items-center h-screen pt-10">
       <form class="max-w-md w-full md:w-2/3 lg:w-1/2 xl:w-1/3 p-8 bg-white rounded-lg shadow-lg">
         <h2 class="text-2xl font-semibold mb-6">Información de Reserva</h2>
 
