--- a/pages/cartas/cachimbas.html
+++ b/pages/cartas/cachimbas.html
@@ -5,44 +5,9 @@
   <title>El Caiman Club</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <style>
-      .carta {
-          max-width: 800px;
-          margin: 20px auto;
-          background-color: #264653; /* Color de fondo oscuro tropical */
-          padding: 20px;
-          border-radius: 8px;
-          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-      }
-      .titulo-carta {
-          font-size: 32px;
-          text-align: center;
-          margin-bottom: 20px;
-          color: #2a9d8f; /* Color tropical para el título */
-      }
-      .titulo-categoria {
-          font-size: 24px;
-          font-weight: bold;
-          border-bottom: 2px solid #e9c46a; /* Borde dorado para categorías */
-          margin-bottom: 10px;
-          padding-bottom: 5px;
-          color: #f4a261; /* Color cálido para títulos de categorías */
-      }
-      .producto {
-          display: flex;
-          justify-content: space-between;
-          margin-bottom: 5px;
-      }
-      .precio {
-          color: #e76f51; /* Color tropical para los precios */
-          font-weight: bold;
-      }
-      .contenido{
-          color: #38b2ac;
-      }
-  </style>
+  <link rel="stylesheet" href="../../css/carta.css">
 </head>
-<body class=" bg-green-100">
+<body class=" bg-gray-200">
 <header>
   <!-- Navbar -->
   <nav class="bg-white p-4">
@@ -87,7 +52,7 @@
 <main>
   <div class="container mx-auto p-8">
     <div class="carta">
-      <div class="titulo-carta">Cachimbas</div>
+      <div class="titulo-carta"><b>SHISHAS</b></div>
 
       <div class="categoria">
         <div class="titulo-categoria">Shisha Tradicional - 10€</div>
