--- a/pages/cartas/combinados.html
+++ b/pages/cartas/combinados.html
@@ -4,52 +4,7 @@
   <meta charset="UTF-8">
   <title>El Caiman Club</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <style>
-      body {
-          color: #fff; /* Texto en blanco */
-          font-family: 'Roboto', sans-serif;
-      }
-
-      .carta {
-          max-width: 800px;
-          margin: 20px auto;
-          background-color: #2a2a2a; /* Fondo ligeramente más claro para la carta */
-          padding: 20px;
-          border-radius: 8px;
-          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5); /* Sombra para un efecto flotante */
-      }
-
-      .titulo-carta {
-          font-family: 'Playfair Display', serif;
-          font-size: 32px;
-          text-align: center;
-          margin-bottom: 20px;
-          color: #d2a679; /* Color dorado para el título */
-      }
-
-      .categoria {
-          margin-bottom: 15px;
-      }
-
-      .titulo-categoria {
-          font-size: 24px;
-          font-weight: bold;
-          border-bottom: 2px solid #d2a679;
-          margin-bottom: 10px;
-          padding-bottom: 5px;
-      }
-
-      .producto {
-          display: flex;
-          justify-content: space-between;
-          margin-bottom: 5px;
-      }
-
-      .precio {
-          color: #d2a679; /* Color dorado para los precios */
-          font-weight: bold;
-      }
-  </style>
+  <link rel="stylesheet" href="../../css/carta.css">
 </head>
 <body class="bg-gray-200">
 <header>
