--- a/pages/cartas/vinos.html
+++ b/pages/cartas/vinos.html
@@ -4,39 +4,7 @@
   <meta charset="UTF-8">
   <title>El Caiman Club</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <style>
-      body {
-          background-color: #4b0b26; /* Un fondo neutro y suave */
-      }
-      .carta {
-          max-width: 600px;
-          margin: 20px auto;
-          background-color: #f8f0eb; /* Un tono claro como fondo para la carta */
-          padding: 20px;
-          border-radius: 8px;
-          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-      }
-      .titulo-carta {
-          font-size: 32px;
-          text-align: center;
-          margin-bottom: 20px;
-          color: #641e16; /* Un tono burdeos oscuro, recordando al vino */
-      }
-      .contenido {
-          color: #6e2c00; /* Un tono marrón oscuro para los nombres, como la madera de barricas */
-          font-weight: bold;
-      }
-      .producto {
-          display: flex;
-          justify-content: space-between;
-          margin-bottom: 5px;
-      }
-      .precio {
-          color: #d7b9d5; /* Un color claro para los precios, manteniendo la legibilidad */
-          font-weight: bold;
-      }
-  </style>
-
+  <link rel="stylesheet" href="../../css/carta.css">
 </head>
 <body>
 <header>
@@ -81,7 +49,7 @@
 </header>
 <main>
   <div class="carta">
-    <div class="titulo-carta" style="color: #3a86ff;">Vino</div>
+    <div class="titulo-carta"><b>VINOS</b></div>
 
     <div class="categoria">
       <div class="producto"><span class="contenido">Copa Rioja Tinto</span> <span class="precio">2,50€</span></div>
