--- a/pages/cartas/refrescos.html
+++ b/pages/cartas/refrescos.html
@@ -4,49 +4,7 @@
   <meta charset="UTF-8">
   <title>El Caiman Club</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <style>
-      body {
-          color: #fff; /* Texto en blanco */
-          font-family: 'Roboto', sans-serif;
-      }
-
-      .carta {
-          max-width: 600px;
-          margin: 20px auto;
-          background-color: #264653; /* Fondo oscuro tropical */
-          padding: 20px;
-          border-radius: 8px;
-          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-      }
-
-      .titulo-carta {
-          font-size: 32px;
-          text-align: center;
-          margin-bottom: 20px;
-          color: #3a86ff; /* Azul claro para un toque fresco y refrescante */
-      }
-
-      .categoria {
-          margin-bottom: 15px;
-      }
-
-      .contenido {
-          color: #38b2ac; /* Azul turquesa tropical para los nombres de los cócteles */
-          font-weight: bold;
-      }
-
-      .producto {
-          display: flex;
-          justify-content: space-between;
-          margin-bottom: 5px;
-      }
-
-      .precio {
-          color: #e76f51; /* Color tropical para los precios */
-          font-weight: bold;
-      }
-  </style>
-
+  <link rel="stylesheet" href="../../css/carta.css">
 </head>
 <body class="bg-gray-200">
 <header>
@@ -92,7 +50,7 @@
 
 <main>
   <div class="carta">
-    <div class="titulo-carta" style="color: #3a86ff;">Refrescos</div>
+    <div class="titulo-carta"><b>REFRESCOS</b></div>
 
     <div class="categoria">
       <div class="producto"><span class="contenido">Coca-cola</span> <span class="precio">2,80€</span></div>
