--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/index-style.css">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <title>El Caiman Club</title>
 </head>
-<body class="bg-gray-200" background="src/img/landingpage-bg.jpg">
+<body class="landingpage-bg">
 <!-- Navbar -->
 <nav class="bg-white p-4">
     <div class="container mx-auto flex justify-between items-center bg-white">
         <!--Logo -->
         <div>
-            <a href="#"><img src="/src/img/logo/caiman-logo.png" class="img-fluid" alt="El Caiman Club" height="25%" width="35%"></a>
+            <a href="index.html"><img src="/src/img/logo/caiman-logo.png" class="img-fluid" alt="El Caiman Club" height="25%" width="35%"></a>
         </div>
         <!--Elementos del menú-->
         <div class="hidden md:flex space-x-4">
