--- a/pages/carta.html
+++ b/pages/carta.html
@@ -80,7 +80,7 @@
       <!-- Categoría Combinados -->
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4"> <!-- Añade margen en la parte inferior -->
         <a href="cartas/combinados.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
-          <img src="../src/img/carta/png/combinado-neon.png" alt="Combinados" class="w-full h-full rounded-lg shadow object-cover"> <!--TODO LINKEAR IMAGEN DE CATEGORIA-->
+          <img src="../src/img/carta/png/combinado-neon.png" alt="Combinados" class="w-full h-full rounded-lg shadow object-cover">
           <p class="text-sm font-semibold mt-2 hidden md:block">Combinados</p>
         </a>
       </div>
@@ -88,7 +88,7 @@
       <!-- Categoría Cachimbas -->
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
         <a href="cartas/cachimbas.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
-          <img src="../src/img/carta/png/shisha-neon.png" alt="Cachimbas" class="w-full h-full rounded-lg shadow object-cover"> <!--TODO LINKEAR IMAGEN DE CATEGORIA-->
+          <img src="../src/img/carta/png/shisha-neon.png" alt="Cachimbas" class="w-full h-full rounded-lg shadow object-cover">
           <p class="text-sm font-semibold mt-2 hidden md:block">Cachimbas</p>
         </a>
       </div>
@@ -96,7 +96,7 @@
       <!-- Categoría Cócteles -->
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
         <a href="cartas/cocteles.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
-          <img src="../src/img/carta/svg/coctel-neon.svg" alt="Cócteles" class="w-full h-full rounded-lg shadow object-cover"> <!--TODO LINKEAR IMAGEN DE CATEGORIA-->
+          <img src="../src/img/carta/png/coctel-neon.png" alt="Cócteles" class="w-full h-full rounded-lg shadow object-cover">
           <p class="text-sm font-semibold mt-2 hidden md:block">Cócteles</p>
         </a>
       </div>
@@ -104,7 +104,7 @@
       <!-- Categoría Cervezas -->
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
         <a href="cartas/cervezas.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
-          <img src="../src/img/carta/png/cerveza-neon.png" alt="Cervezas" class="w-full h-full rounded-lg shadow object-cover"> <!--TODO LINKEAR IMAGEN DE CATEGORIA-->
+          <img src="../src/img/carta/png/cerveza-neon.png" alt="Cervezas" class="w-full h-full rounded-lg shadow object-cover">
           <p class="text-sm font-semibold mt-2 hidden md:block">Cervezas</p>
         </a>
       </div>
@@ -112,24 +112,23 @@
       <!-- Categoría Vinos -->
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
         <a href="cartas/vinos.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
-          <img src="../src/img/carta/png/vino-neon.png" alt="Vinos" class="w-full h-full rounded-lg shadow object-cover"> <!--TODO LINKEAR IMAGEN DE CATEGORIA-->
+          <img src="../src/img/carta/png/vino-neon.png" alt="Vinos" class="w-full h-full rounded-lg shadow object-cover">
           <p class="text-sm font-semibold mt-2 hidden md:block">Vinos</p>
         </a>
       </div>
 
       <!-- Categoría Refrescos -->
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
-        <a href="cartas/refrescos.html" class="focus-target" data-message="" data-image="" data-description="">
-          <img src="../src/img/carta/png/refresco-neon.png" alt="Refrescos" class="w-full h-full rounded-lg shadow object-cover"> <!--TODO LINKEAR IMAGEN DE CATEGORIA-->
+        <a href="cartas/refrescos.html" class="focus-target" data-message="" data-image="" data-description=""><!--TODO RELLENAR LOS DATA-->
+          <img src="../src/img/carta/png/refresco-neon.png" alt="Refrescos" class="w-full h-full rounded-lg shadow object-cover">
           <p class="text-sm font-semibold mt-2 hidden md:block">Refrescos</p>
         </a>
       </div>
 
       <!-- Categoría Batidos -->
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
-        <a href="cartas/batidos.html" class="focus-target" data-message="" data-image="" data-description="">
-          <img src="../src/img/carta/png/batido-neon.png" alt="Batidos" class="w-full h-full rounded-lg shadow object-cover"> <!--TODO LINKEAR IMAGEN DE CATEGORIA-->
-          <p class="text-sm font-semibold mt-2 hidden md:block">Batidos</p>
+        <a href="cartas/batidos.html" class="focus-target" data-message="" data-image="" data-description=""><!--TODO RELLENAR LOS DATA-->
+          <img src="../src/img/carta/png/batido-neon.png" alt="Batidos" class="w-full h-full rounded-lg shadow object-cover">
         </a>
       </div>
     </div>
