--- a/pages/carta.html
+++ b/pages/carta.html
@@ -81,7 +81,7 @@
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4"> <!-- Añade margen en la parte inferior -->
         <a href="cartas/combinados.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/combinado-neon.png" alt="Combinados" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="text-sm font-semibold mt-2 hidden md:block">Combinados</p>
+          <p class="text-sm font-semibold mt-2 md:block">Combinados</p>
         </a>
       </div>
 
@@ -89,7 +89,7 @@
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
         <a href="cartas/cachimbas.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/shisha-neon.png" alt="Cachimbas" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="text-sm font-semibold mt-2 hidden md:block">Cachimbas</p>
+          <p class="text-sm font-semibold mt-2 md:block">Cachimbas</p>
         </a>
       </div>
 
@@ -97,7 +97,7 @@
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
         <a href="cartas/cocteles.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/coctel-neon.png" alt="Cócteles" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="text-sm font-semibold mt-2 hidden md:block">Cócteles</p>
+          <p class="text-sm font-semibold mt-2 md:block">Cócteles</p>
         </a>
       </div>
 
@@ -105,7 +105,7 @@
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
         <a href="cartas/cervezas.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/cerveza-neon.png" alt="Cervezas" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="text-sm font-semibold mt-2 hidden md:block">Cervezas</p>
+          <p class="text-sm font-semibold mt-2 md:block">Cervezas</p>
         </a>
       </div>
 
@@ -113,7 +113,7 @@
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
         <a href="cartas/vinos.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/vino-neon.png" alt="Vinos" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="text-sm font-semibold mt-2 hidden md:block">Vinos</p>
+          <p class="text-sm font-semibold mt-2 md:block">Vinos</p>
         </a>
       </div>
 
@@ -121,7 +121,7 @@
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
         <a href="cartas/refrescos.html" class="focus-target" data-message="" data-image="" data-description=""><!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/refresco-neon.png" alt="Refrescos" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="text-sm font-semibold mt-2 hidden md:block">Refrescos</p>
+          <p class="text-sm font-semibold mt-2 md:block">Refrescos</p>
         </a>
       </div>
 
@@ -129,6 +129,7 @@
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
         <a href="cartas/batidos.html" class="focus-target" data-message="" data-image="" data-description=""><!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/batido-neon.png" alt="Batidos" class="w-full h-full rounded-lg shadow object-cover">
+          <p class="text-sm font-semibold mt-2 md:block">Batidos</p>
         </a>
       </div>
     </div>
