--- a/pages/carta.html
+++ b/pages/carta.html
@@ -29,7 +29,7 @@
       }
   </style>
 </head>
-<body class="bg-gray-200">
+<body class="bg-grey-500">
 <header class="fixed w-full z-10">
   <!-- Navbar -->
   <nav class="bg-white p-4">
