link fixed and where we are started

--- a/pages/carta.html
+++ b/pages/carta.html
@@ -20,13 +20,13 @@
       }
 
 
-      /*TODO DESCOMENTAR LOS ESTILOS DEL MAIN CUANDO SE TENGAN LAS IMAGENES DE LAS CATEGORIAS*/
-      main {
-          /*background-image: url('/src/img/fondos/fondo-carta.jpeg'); !* Añade tu propia imagen aquí *!*/
+      /* main {
+          /* background-image: url('/src/img/fondos/fondo-carta.jpeg'); !* Añade tu propia imagen aquí *!*/
           /*background-size: cover;*/
           /*background-position: center;*/
-          /*background-repeat: no-repeat;*/
-      }
+          /*background-repeat: no-repeat; 
+      } */
+
   </style>
 </head>
 <body class="bg-grey-500">
