Añadidas imágenes nuevas y ligeras modificaciones en los estilos

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <!-- Contenido de la página -->
 <div class="container mx-auto p-8 landing flex-col text-center mt-24">
-    <h1 class="text-6xl font-bold text-white mb-6 neon-text">¿Qué quieres tomar?</h1>
+    <h1 class="text-6xl font-bold text-white mb-6 neon-text mt-24">¿Qué quieres tomar?</h1>
     <a href="pages/carta.html">
     <button type="button" class="text-2xl text-white bg-gradient-to-r from-pink-400 via-pink-500 to-pink-600 
     hover:from-pink-600 hover:via-pink-500 hover:to-pink-400 focus:ring-4 
