Form Validation Update and minor style adds

--- a/pages/donde-estamos.html
+++ b/pages/donde-estamos.html
@@ -43,7 +43,7 @@
           <a href="shop.html" class="block text-pink-600 hover:text-pink-900 mb-2">Shop</a>
         </div>
       <main class="pt-24 flex flex-col min-h-screen landing">
-    <div class="max-w-5xl mx-auto bg-white shadow-md rounded-md p-8 neon-bg">
+    <div class="max-w-5xl mx-auto m-10 bg-white shadow-md rounded-md p-8 neon-bg">
         <h1 class="text-4xl font-bold mb-6 neon-text text-center mb-12">
             ¿Dónde estamos?
           </h1>
