--- a/pages/carta.html
+++ b/pages/carta.html
@@ -19,13 +19,16 @@
           }
       }
 
+      .letras {
+          color: white;
+      }
 
-      /* main {
-          /* background-image: url('/src/img/fondos/fondo-carta.jpeg'); !* Añade tu propia imagen aquí *!*/
-          /*background-size: cover;*/
-          /*background-position: center;*/
-          /*background-repeat: no-repeat; 
-      } */
+       main {
+           background-image: url('/src/img/fondos/caiman-fondo.jpeg');
+          background-size: cover;
+          background-position: center;
+          background-repeat: no-repeat;
+      }
 
   </style>
 </head>
@@ -81,7 +84,7 @@
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4"> <!-- Añade margen en la parte inferior -->
         <a href="cartas/combinados.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/combinado-neon.png" alt="Combinados" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="text-sm font-semibold mt-2 md:block">Combinados</p>
+          <p class="text-sm font-semibold mt-2 md:block letras">Combinados</p>
         </a>
       </div>
 
@@ -89,7 +92,7 @@
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
         <a href="cartas/cachimbas.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/shisha-neon.png" alt="Cachimbas" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="text-sm font-semibold mt-2 md:block">Cachimbas</p>
+          <p class="text-sm font-semibold mt-2 md:block letras">Cachimbas</p>
         </a>
       </div>
 
@@ -97,7 +100,7 @@
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
         <a href="cartas/cocteles.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/coctel-neon.png" alt="Cócteles" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="text-sm font-semibold mt-2 md:block">Cócteles</p>
+          <p class="text-sm font-semibold mt-2 md:block letras">Cócteles</p>
         </a>
       </div>
 
@@ -105,7 +108,7 @@
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
         <a href="cartas/cervezas.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/cerveza-neon.png" alt="Cervezas" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="text-sm font-semibold mt-2 md:block">Cervezas</p>
+          <p class="text-sm font-semibold mt-2 md:block letras">Cervezas</p>
         </a>
       </div>
 
@@ -113,7 +116,7 @@
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
         <a href="cartas/vinos.html" class="focus-target" data-message="" data-image="" data-description=""> <!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/vino-neon.png" alt="Vinos" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="text-sm font-semibold mt-2 md:block">Vinos</p>
+          <p class="text-sm font-semibold mt-2 md:block letras">Vinos</p>
         </a>
       </div>
 
@@ -121,7 +124,7 @@
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
         <a href="cartas/refrescos.html" class="focus-target" data-message="" data-image="" data-description=""><!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/refresco-neon.png" alt="Refrescos" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="text-sm font-semibold mt-2 md:block">Refrescos</p>
+          <p class="text-sm font-semibold mt-2 md:block letras">Refrescos</p>
         </a>
       </div>
 
@@ -129,7 +132,7 @@
       <div class="block lg:w-32 lg:h-32 md:w-24 md:h-24 w-20 h-20 text-center mb-4">
         <a href="cartas/batidos.html" class="focus-target" data-message="" data-image="" data-description=""><!--TODO RELLENAR LOS DATA-->
           <img src="../src/img/carta/png/batido-neon.png" alt="Batidos" class="w-full h-full rounded-lg shadow object-cover">
-          <p class="text-sm font-semibold mt-2 md:block">Batidos</p>
+          <p class="text-sm font-semibold mt-2 md:block letras">Batidos</p>
         </a>
       </div>
     </div>
