--- a/pages/carta.html
+++ b/pages/carta.html
@@ -23,13 +23,13 @@
           color: white;
       }
 
-      .bgimg-carta {
+       main {
+           background-image: url('/src/img/fondos/caiman-fondo.jpeg');
           background-size: cover;
-          background-image: url('../src/img/fondos/fondo-carta.jpeg');
+          background-position: center;
           background-repeat: no-repeat;
-          height: 100vh;
-          backdrop-filter: blur(5px);
       }
+
   </style>
 </head>
 <body class="bg-grey-500">
@@ -72,7 +72,7 @@
     <a href="shop.html" class="block text-pink-600 hover:text-pink-900 mb-2">Shop</a>
   </div>
 </header>
-<main class="pt-24 flex flex-col min-h-screen bgimg-carta"> <!-- Agregue padding-top para compensar el header fijo -->
+<main class="pt-24 flex flex-col min-h-screen"> <!-- Agregue padding-top para compensar el header fijo -->
   <!-- Contenido de la página -->
   <div class="container mx-auto flex-1 p-8 flex justify-center items-center">
 
