Minor fixes in reservas and in combinados.html

--- a/pages/cartas/combinados.html
+++ b/pages/cartas/combinados.html
@@ -5,6 +5,7 @@
   <title>El Caiman Club</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../../css/carta.css">
+  <link rel="stylesheet" href="../../css/style.css">
 </head>
 <body class="bg-gray-200">
 <header>
@@ -50,71 +51,71 @@
 <main>
   <div class="container mx-auto p-8">
     <div class="carta">
-      <div class="titulo-carta">Combinados</div>
+      <div class="titulo-carta font-bold text-3xl neon-text">COMBINADOS</div>
       <!-- Categoría: Ginebras -->
       <div class="categoria">
         <div class="titulo-categoria">GINEBRAS</div>
-        <div class="producto"><span>Beffeter</span> <span class="precio">7€</span></div>
-        <div class="producto"><span>Tanqueray </span> <span class="precio">7€</span></div>
-        <div class="producto"><span>Puerto de Indias</span> <span class="precio">7€</span></div>
-        <div class="producto"><span>Larios </span> <span class="precio">7€</span></div>
-        <div class="producto"><span>Seagrams  </span> <span class="precio">7€</span></div>
-        <div class="producto"><span>Tanqueray 0,0</span> <span class="precio">7€</span></div>
+        <div class="producto"><span>Beefeater</span> <span class="precio">7.00€</span></div>
+        <div class="producto"><span>Tanqueray </span> <span class="precio">7.00€</span></div>
+        <div class="producto"><span>Puerto de Indias</span> <span class="precio">7.00€</span></div>
+        <div class="producto"><span>Larios </span> <span class="precio">7.00€</span></div>
+        <div class="producto"><span>Seagrams  </span> <span class="precio">7.00€</span></div>
+        <div class="producto"><span>Tanqueray 0,0</span> <span class="precio">7.00€</span></div>
         <!-- ... Más productos ... -->
         <div class="titulo-categoria">Premium</div>
-        <div class="producto"><span>Martin Millers</span> <span class="precio">9€</span></div>
-        <div class="producto"><span>Nordes</span> <span class="precio">9€</span></div>
-        <div class="producto"><span>Saphire </span> <span class="precio">9€</span></div>
-        <div class="producto"><span>London </span> <span class="precio">9€</span></div>
-        <div class="producto"><span>Bulldog </span> <span class="precio">9€</span></div>
+        <div class="producto"><span>Martin Millers</span> <span class="precio">9.00€</span></div>
+        <div class="producto"><span>Nordes</span> <span class="precio">9.00€</span></div>
+        <div class="producto"><span>Bombay Sapphire</span> <span class="precio">9.00€</span></div>
+        <div class="producto"><span>The London Nº1</span> <span class="precio">9.00€</span></div>
+        <div class="producto"><span>Bulldog London Dry</span> <span class="precio">9.00€</span></div>
         <!-- ... Más productos ... -->
       </div>
 
       <!-- Categoría: Whisky -->
       <div class="categoria">
         <div class="titulo-categoria">WHISKY</div>
-        <div class="producto"><span>Ballantines</span> <span class="precio">7€</span></div>
-        <div class="producto"><span>J&B</span> <span class="precio">7€</span></div>
-        <div class="producto"><span>White Label</span> <span class="precio">7€</span></div>
-        <div class="producto"><span>Jony Walker Red</span> <span class="precio">7€</span></div>
-        <div class="producto"><span>Cutty sark</span> <span class="precio">7€</span></div>
+        <div class="producto"><span>Ballantine's</span> <span class="precio">7.00€</span></div>
+        <div class="producto"><span>J&B</span> <span class="precio">7.00€</span></div>
+        <div class="producto"><span>Dewar's White Label</span> <span class="precio">7.00€</span></div>
+        <div class="producto"><span> Johnnie Walker Red Label</span> <span class="precio">7.00€</span></div>
+        <div class="producto"><span>Cutty sark</span> <span class="precio">7.00€</span></div>
         <!-- ... Más productos ... -->
         <div class="titulo-categoria">Premium</div>
-        <div class="producto"><span>Jack Daniels</span> <span class="precio">9€</span></div>
-        <div class="producto"><span>Jony Walker Back</span> <span class="precio">9€</span></div>
-        <div class="producto"><span>Cardhu</span> <span class="precio">12€</span></div>
+        <div class="producto"><span>Jack Daniel's</span> <span class="precio">9.00€</span></div>
+        <div class="producto"><span> Johnnie Walker Black Label</span> <span class="precio">9.00€</span></div>
+        <div class="producto"><span>Cardhu</span> <span class="precio">12.00€</span></div>
         <!-- ... Más productos ... -->
       </div>
 
       <!-- Categoría: RON -->
       <div class="categoria">
         <div class="titulo-categoria">RON</div>
-        <div class="producto"><span>Cacique </span> <span class="precio">7€</span></div>
-        <div class="producto"><span>Brugal </span> <span class="precio">7€</span></div>
-        <div class="producto"><span>Legendario </span> <span class="precio">7€</span></div>
-        <div class="producto"><span>Barcelo</span> <span class="precio">7€</span></div>
-        <div class="producto"><span>Negrita </span> <span class="precio">7€</span></div>
+        <div class="producto"><span>Cacique</span> <span class="precio">7.00€</span></div>
+        <div class="producto"><span>Brugal </span> <span class="precio">7.00€</span></div>
+        <div class="producto"><span>Legendario </span> <span class="precio">7.00€</span></div>
+        <div class="producto"><span>Barcelo</span> <span class="precio">7.00€</span></div>
+        <div class="producto"><span>Negrita </span> <span class="precio">7.00€</span></div>
         <!-- ... Más productos ... -->
         <div class="titulo-categoria">Premium</div>
-        <div class="producto"><span>Havana 7</span> <span class="precio">9€</span></div>
-        <div class="producto"><span>Santa Teresa</span> <span class="precio">9€</span></div>
-        <div class="producto"><span>Pampero Aniversario</span> <span class="precio">12€</span></div>
+        <div class="producto"><span>Havana 7</span> <span class="precio">9.00€</span></div>
+        <div class="producto"><span>Santa Teresa</span> <span class="precio">9.00€</span></div>
+        <div class="producto"><span>Pampero Aniversario</span> <span class="precio">12.00€</span></div>
         <!-- ... Más productos ... -->
       </div>
 
       <!-- Categoría: Vodka -->
       <div class="categoria">
         <div class="titulo-categoria">Vodka</div>
-        <div class="producto"><span>Absolut  </span> <span class="precio">7€</span></div>
-        <div class="producto"><span>Eristoff  </span> <span class="precio">7€</span></div>
+        <div class="producto"><span>Absolut  </span> <span class="precio">7.00</span></div>
+        <div class="producto"><span>Eristoff</span> <span class="precio">7.00€</span></div>
         <!-- ... Más productos ... -->
         <div class="titulo-categoria">Premium</div>
-        <div class="producto"><span>Eristoff Black</span> <span class="precio">9€</span></div>
+        <div class="producto"><span>Eristoff Black</span> <span class="precio">9.00€</span></div>
 
         <!-- ... Más productos ... -->
       </div>
 
-      <div>*Combinado con bebida energética + 1€</div>
+      <div><b>*Combinado con bebida energética + 1€</b></div>
     </div>
   </div>
 </main>
