--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -19,13 +19,13 @@
       </div>
       <!-- Elementos del menú -->
       <div class="hidden md:flex space-x-4">
-        <a href="#" class="text-pink-600 hover:text-pink-900">Inicio</a>
-        <a href="pages/carta.html" class="text-pink-600 hover:text-pink-900">Carta</a>
-        <a href="pages/reservas.html" class="text-pink-600 hover:text-pink-900">Reservas</a>
-        <a href="pages/ofertas.html" class="text-pink-600 hover:text-pink-900">Ofertas y eventos</a>
-        <a href="pages/donde-estamos.html" class="text-pink-600 hover:text-pink-900">Donde estamos</a>
-        <a href="pages/about-us.html" class="text-pink-600 hover:text-pink-900">Nosotros</a>
-        <a href="pages/shop.html" class="text-pink-600 hover:text-pink-900">Shop</a>
+        <a href="../index.html" class="text-pink-600 hover:text-pink-900">Inicio</a>
+        <a href="carta.html" class="text-pink-600 hover:text-pink-900">Carta</a>
+        <a href="reservas.html" class="text-pink-600 hover:text-pink-900">Reservas</a>
+        <a href="ofertas.html" class="text-pink-600 hover:text-pink-900">Ofertas y eventos</a>
+        <a href="donde-estamos.html" class="text-pink-600 hover:text-pink-900">Donde estamos</a>
+        <a href="about-us.html" class="text-pink-600 hover:text-pink-900">Nosotros</a>
+        <a href="shop.html" class="text-pink-600 hover:text-pink-900">Shop</a>
       </div>
 
       <div class="md:hidden">
@@ -40,12 +40,13 @@
 
   <!-- Menú desplegable para dispositivos móviles -->
   <div id="menu" class="md:hidden hidden bg-white p-4">
-    <a href="pages/carta.html" class="block text-pink-600 hover:text-pink-900 mb-2">Carta</a>
-    <a href="pages/reservas.html" class="block text-pink-600 hover:text-pink-900 mb-2">Reservas</a>
-    <a href="pages/ofertas.html" class="block text-pink-600 hover:text-pink-900 mb-2">Ofertas y eventos</a>
-    <a href="pages/donde-estamos.html" class="block text-pink-600 hover:text-pink-900 mb-2">Donde estamos</a>
-    <a href="pages/about-us.html" class="block text-pink-600 hover:text-pink-900 mb-2">Nosotros</a>
-    <a href="pages/shop.html" class="block text-pink-600 hover:text-pink-900 mb-2">Shop</a>
+    <a href="../index.html" class="block text-pink-600 hover:text-pink-900 mb-2">Inicio</a>
+    <a href="carta.html" class="block text-pink-600 hover:text-pink-900 mb-2">Carta</a>
+    <a href="reservas.html" class="block text-pink-600 hover:text-pink-900 mb-2">Reservas</a>
+    <a href="ofertas.html" class="block text-pink-600 hover:text-pink-900 mb-2">Ofertas y eventos</a>
+    <a href="donde-estamos.html" class="block text-pink-600 hover:text-pink-900 mb-2">Donde estamos</a>
+    <a href="about-us.html" class="block text-pink-600 hover:text-pink-900 mb-2">Nosotros</a>
+    <a href="shop.html" class="block text-pink-600 hover:text-pink-900 mb-2">Shop</a>
   </div>
 
   <main class="pt-18">
