modify menu and swipe bg image on cartashtml

--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -87,7 +87,10 @@
         </div>
 
         <!-- Botón de enviar -->
-        <button onClick="validarFormulario(event)" type="submit" class="bg-pink-600 text-white py-2 px-4 rounded hover:bg-pink-700 w-full">Enviar</button>
+        <button onClick="validarFormulario(event)" type="submit" class="bg-pink-600 text-white py-2 px-4 rounded hover:bg-pink-700 w-full text-2xl text-white bg-gradient-to-r from-pink-400 via-pink-500 to-pink-600 
+        hover:from-pink-600 hover:via-pink-500 hover:to-pink-400 focus:ring-4 
+        focus:outline-none focus:ring-pink-300 dark:focus:ring-pink-800 shadow-lg shadow-pink-500/50 
+        dark:shadow-lg dark:shadow-pink-800/80 font-medium rounded-lg text-sm px-5 py-2.5">Enviar</button>
       </form>
     </div>
   </main>
